[package]
name = "github_login"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chrono = "0.4.38"
cookie = "0.18.1"
dotenv = "0.15.0"
headers = "0.4.0"
hyper = { version = "1.5.1", features = ["full"] }
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-cookies = "0.10.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
